@@ -49,7 +49,7 @@
 #define HAVE_CURSES
 #endif
 
-#if HAVE_STRUCT_IF_DATA_IFI_IBYTES
+#if HAVE_WORKING_GETIFADDRS 
 #define GETIFADDRS
 #endif
 
@@ -206,7 +206,13 @@
 #define CSV_SHORT_OPT
 #endif
 
-#define SHORT_OPTIONS ":ht:d:Va:u:I:i:o:c:D:S:T:A:" PROC_SHORT_OPT HTML_SHORT_OPT NETSTAT_SHORT_OPT CSV_SHORT_OPT
+#if EXTENDED_STATS
+#define EXTENDED_STATS_SHORT_OPT "A:T:"
+#else
+#define EXTENDED_STATS_SHORT_OPT
+#endif
+
+#define SHORT_OPTIONS ":ht:d:Va:u:I:i:o:c:D:S:" EXTENDED_STATS_SHORT_OPT PROC_SHORT_OPT HTML_SHORT_OPT NETSTAT_SHORT_OPT CSV_SHORT_OPT
 
 #define BYTES_OUT 1
 #define BITS_OUT 2
