@@ -175,6 +175,8 @@ char *token, *value;
 #if EXTENDED_STATS
     } else if( strcasecmp( token, "TYPE" ) == 0 ) {
         if (value) output_type=str2output_type(value);
+    } else if( strcasecmp( token, "AVGLENGTH" ) == 0 ) {
+        if (value) avg_length=atoi(value)*1000;
 #endif        
     } else if( strcasecmp( token, "ALLIF" ) == 0 ) {
         if (value) show_all_if=value[0];
@@ -201,8 +203,6 @@ char *token, *value;
         if (value) daemonize=value[0]=='0' ? 0 : 1;
     } else if( strcasecmp( token, "SUMHIDDEN" ) == 0 ) {
         if (value) sumhidden=value[0]=='0' ? 0 : 1;
-    } else if( strcasecmp( token, "AVGLENGTH" ) == 0 ) {
-        if (value) avg_length=atoi(value)*1000;
 #ifdef HTML
     } else if( strcasecmp( token, "HTMLREFRESH" ) == 0 ) {
         if (value && atol(value)>0) { html_refresh=atol(value); }
@@ -244,11 +244,11 @@ void get_cmdln_options(int argc, char *argv[]) {
         {"unit",1,0,'u'},
 #if EXTENDED_STATS        
         {"type",1,0,'T'},
+        {"avglength",1,0,'A'},
 #endif        
         {"interfaces",1,0,'I'},
         {"sumhidden",1,0,'S'},
         {"output",1,0,'o'},
-        {"avglength",1,0,'A'},
 #ifdef CSV
         {"csvchar",1,0,'C'},
         {"csvfile",1,0,'F'},
@@ -288,9 +288,9 @@ void get_cmdln_options(int argc, char *argv[]) {
         }
 #endif    
     }
-#endif
     /* reset getopt again  */
     optind=1;
+#endif
     /* get command line arguments, kinda ugly, wanna rewrite it? */
     while (1) {
 #ifdef LONG_OPTIONS
@@ -384,6 +384,9 @@ void get_cmdln_options(int argc, char *argv[]) {
             case 'T':
                 output_type=str2output_type(optarg);
                 break;
+            case 'A':
+                if (optarg) avg_length=atoi(optarg)*1000;
+                break;
 #endif                
             case 'd':
                 if (optarg) dynamic=atoi(optarg);
@@ -391,11 +394,6 @@ void get_cmdln_options(int argc, char *argv[]) {
             case 'u':
                 output_unit=str2output_unit(optarg);
                 break;
-#if EXTENDED_STATS                
-            case 'A':
-                if (optarg) avg_length=atoi(optarg)*1000;
-                break;
-#endif                
 #if NETSTAT && ALLOW_NETSTATPATH
             case 'n':
                 if (optarg && (strlen(optarg)<PATH_MAX)) strcpy(NETSTAT_FILE,optarg);
@@ -408,6 +406,7 @@ void get_cmdln_options(int argc, char *argv[]) {
         }
     }
     if (iface_list==NULL && show_all_if==1) show_all_if=2;
+#if EXTENDED_STATS    
     /* default init of avg_length */
     if (avg_length==0) {
         if (delay<AVG_LENGTH/2) 
@@ -416,6 +415,7 @@ void get_cmdln_options(int argc, char *argv[]) {
             avg_length=(delay*2)+1;
     } else /* avg_length was set via cmdline or config file, better check it */
         if (delay*2>=avg_length) deinit("avglength needs to be a least twice the value of timeout\n");
+#endif    
     return;
 }
 
